# utils_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-run-cov.sh
.github/workflows/: #tests.yml#  tests.yml
demos/: CMakeLists.txt  demo_compiletime.md  demo_hash.cpp  demo_hash.md  demo_json.md  demo_logger.cpp  demo_logger.md  demo_matrix.cpp  demo_matrix.md  demo_random.md  demo_system.cpp  demo_system.md
demos/graph/: CMakeLists.txt  demo_adjmat.cpp  demo_adjmat.md  demo_bfs.cpp  demo_bfs.md  demo_bitadjmat.cpp  demo_bitadjmat.md  demo_dijkstra.cpp  demo_dijkstra.md  demo_graphlibrary_viz.cpp  demo_graphlibrary_viz.md  demo_write_graphviz.cpp  demo_write_graphviz.md
demos/parallel/: CMakeLists.txt  demo_thread_pool.cpp  demo_thread_pool.md
docs/: Doxyfile.in
include/: R.hpp  avl_tree.hpp  betterlogger.hpp  bigint.hpp  bitvector.hpp  compiletime.hpp  hash.hpp  json.hpp  logger.hpp  numpy.hpp  print.hpp  print_enum.hpp  random.hpp  string.hpp  system.hpp  timing.hpp
include/enum/: enum_map.hpp  enum_print.hpp
include/graph/: algorithms.hpp  bitadjmat.hpp  conversions.hpp  graph.hpp  graphviz.hpp  library.hpp  line_graph.hpp  pathfinding.hpp  properties.hpp  transforms.hpp  transforms_def.hpp  vecbooladjmat.hpp
include/graph/detail/: generic_prop.hpp  generic_prop_value_proxy.hpp  graph_prop.hpp
include/metaprogramming/: custom_concepts.hpp  is_stl_container.hpp  tuple_contains.hpp
include/parallel/: thread_pool.hpp  threadsafe_queue.hpp
include/utils_cpp/: R.hpp  bigint.hpp  compiletime.hpp  disjointset.hpp  hash.hpp  indexing.hpp  interval_tree.hpp  json.hpp  matrix.hpp  numpy.hpp  python.hpp  random.hpp  segment_tree.hpp  string.hpp
include/utils_cpp/enum/: enum_basics.hpp  enum_print.hpp
include/utils_cpp/graph/: algorithms.hpp  bitadjmat.hpp  conversions.hpp  graph.hpp  graphviz.hpp  library.hpp  line_graph.hpp  pathfinding.hpp  properties.hpp  transforms.hpp  transforms_def.hpp  vecbooladjmat.hpp
include/utils_cpp/graph/detail/: generic_prop.hpp  generic_prop_map.hpp  generic_prop_value_proxy.hpp  graph_prop.hpp
include/utils_cpp/metaprogramming/: is_instantiation.hpp  is_stl_container.hpp  overload.hpp
include/utils_cpp/parallel/: function_wrapper.hpp  thread_pool.hpp
src/: json.cpp  string.cpp
tests/: CMakeLists.txt  test_R.cpp  test_R.hpp  test_avl_tree.cpp  test_bigint.cpp  test_bitvector.cpp  test_compiletime.cpp  test_disjointset.cpp  test_enum.cpp  test_hash.cpp  test_indexing.cpp  test_interval_tree.cpp  test_json.cpp  test_logger.cpp  test_matrix.cpp  test_new_print.cpp  test_numpy.cpp  test_print.cpp  test_python.cpp  test_random.cpp  test_string.cpp  test_timing.cpp
tests/graph/: CMakeLists.txt  test_algorithms.cpp  test_bitadjmat.cpp  test_graphviz.cpp  test_library.cpp  test_line_graph.cpp  test_pathfinding.cpp  test_properties.cpp  test_transform.cpp  test_vecbooladjmat.cpp
tests/parallel/: CMakeLists.txt  test_thread_pool.cpp  test_threadsafe_queue.cpp
