file(GLOB DEMOS "*.cpp")
message(STATUS "utils_cpp -- Configuring Demos")
foreach(example ${DEMOS})
  get_filename_component(exec_name ${example} NAME_WE)
  add_executable(${exec_name} ${example} ${SOURCES})
  target_include_directories(${exec_name} PRIVATE ../include)
  target_link_libraries(${exec_name})
  message(STATUS "utils_cpp --   ${exec_name}... ${Green}OK${ColorReset}")
endforeach()
