file(GLOB TESTS "*.cpp")
message(STATUS "${PROJECT_NAME}/graph -- Configuring Tests")
foreach(test ${TESTS})
  get_filename_component(test_name ${test} NAME_WE)
  add_executable(${test_name} ${test} ${SOURCES})
  target_link_libraries(${test_name} PRIVATE ${PROJECT_NAME})
  add_test(NAME ${test_name} COMMAND ${test_name})
  message(STATUS "${PROJECT_NAME}/graph --   ${test_name}... ${Green}OK${ColorReset}")
endforeach()
