file(GLOB TESTS "*.cpp")
message(STATUS "utils_cpp/parallel -- Configuring Tests")
foreach(test ${TESTS})
  get_filename_component(test_name ${test} NAME_WE)
  add_executable(${test_name} ${test} ${SOURCES})
  target_include_directories(${test_name} PRIVATE ../../include ../../external)
  add_test(NAME ${test_name} COMMAND ${test_name})
  message(STATUS "utils_cpp/parallel --   ${test_name}... ${Green}OK${ColorReset}")
endforeach()
