file(GLOB TESTS "*.cpp")
message(STATUS "${PROJECT_NAME}/parallel -- Configuring Tests")
foreach(test ${TESTS})
  get_filename_component(test_name ${test} NAME_WE)
  add_executable(${test_name} ${test} ${SOURCES})
  target_link_libraries(${test_name} ${PROJECT_NAME})
  add_test(NAME ${test_name} COMMAND ${test_name})
  message(STATUS "${PROJECT_NAME}/parallel --   ${test_name}... ${Green}OK${ColorReset}")
endforeach()
